[package]
name = "mget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.26"
rand = "0.8.5"
smoltcp = { version = "0.8.1", features = ["proto-igmp", "proto-ipv4", "verbose", "log", "phy-tuntap_interface", "phy-raw_socket"] }
trust-dns-proto = { version = "0.22.0", default-features = false }
url = "2.3.1"
