[package]
name = "clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["cargo", "derive"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.138"

[target.windows.dependencies]
kernel32-sys = "0.2.2"
winapi = "0.3.9"
